# SPDX-FileCopyrightText: Copyright (c) 2666680 Ontario Inc. All rights reserved.
# SPDX-License-Identifier: GPL-3.0

[package]
name = "gvm-guest"
version = "0.1.0"
edition = "2021"
authors = ["2666680 Ontario Inc.", "Michael Buchel <michael@arccompute.io>"]
license = "GPL-3.0"

[[bin]]
name = "gvm-guest"
path = "src/guest.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dlopen = "0.1"
dlopen_derive = "0.1.4"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
cc = "1.0"
